--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+  
+    "noImplicitAny": false, // Disables implicit 'any' types
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -15,7 +17,7 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
+    "strict": true, // Turns off strict checking
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
