--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true, // Turns off strict checking
+    "strict": false, // Turns off strict checking
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
