--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-  
+    "checkJs": false,
     "noImplicitAny": false, // Disables implicit 'any' types
 
     /* Bundler mode */
